syntax = "proto3";

package user_api_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/drewspitsin/auth/pkg/user_api_v1;user_api_v1";

service UserV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message User {
        UserCreate user_create = 1;
        google.protobuf.Timestamp created_at = 2;
        google.protobuf.Timestamp updated_at = 3;
}

message UserCreate {
        UserUpdate user_update = 1;
        string password = 2;
}

message UserUpdate {
        int64 id = 1;
        string name = 2;
        string email = 3;
        Role role = 5; 
}

enum Role {
    UNKNOWN = 0;
    ADMIN = 1;
    USER = 2;
}

message CreateRequest {
    UserCreate info = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User info = 1;
}

message UpdateRequest {
    UserUpdate info = 1;
}

message DeleteRequest {
    int64 id = 1;
}